# HyprSupreme-Builder

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CHANGELOG.md  COMMUNITY_COMMANDS.md  COMPATIBILITY.md  COMPLETE_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEEP_FIX_SUMMARY.md  DEVELOPMENT_SESSION_SUMMARY.md  DIAGNOSTIC_REPORT.md  DRIVER_MANAGER.md  Dockerfile  ERROR_HANDLING_SYSTEM.md  FINAL_RATING_100.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  FLATPAK_INTEGRATION.md  FRACTIONAL_SCALING.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  KEYBINDINGS_REFERENCE.md  LICENSE  MANIFEST.in  Makefile  PERFECT_HEALTH_SCORE.md  PLUGIN_DEVELOPMENT_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_ERROR_REPORT.md  PROJECT_PERFECTION_REPORT.md  PROJECT_STATUS.md  QUALITY_CHECKLIST.md  README.md  RELEASE_ANNOUNCEMENT_v2.1.0.md  RELEASE_DEPLOYMENT_v2.1.1.md  (+49 more)
.github/: PROFILE_README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  metrics.yml  quality-assurance.yml
community/: BRANCH_PROTECTION_RUN_RESULTS.md  __init__.py  api_endpoints.py  community_platform.py  launch_web.sh  web_interface.py
community/templates/: base.html  index.html
community/templates/plugin_template/: README.md  manifest.yaml
community/templates/plugin_template/scripts/: example.sh  startup.sh
community/templates/theme_template/: README.md  theme_template.json  theme_template.toml
docs/: CICD.md
examples/: enhanced_error_integration.sh
future-opportunities/: IMPLEMENTATION_GUIDE.md  LAUNCH.md  ab-testing-demo.js  ab-testing-framework.js  ai-test-generator.js  chaos-monkey-demo.js  chaos-monkey.js  complete-demo.js  example-integration.js  package.json  performance-optimizer.js
gui/: __init__.py  driver_manager_gui.sh  hyprsupreme-gui.py
modules/common/: backup.sh  distro_support.sh  enhanced_error_system.sh  error_handler.sh  error_recovery.sh  functions.sh
modules/core/: ai_update_manager.sh  apply_config.sh  apply_feature.sh  dependency_validator.sh  driver_manager.sh  install_audio.sh  install_bluetooth.sh  install_fonts.sh  install_hyprland.sh  install_kitty.sh  install_network.sh  install_notifications.sh  install_nvidia.sh  install_power.sh  install_rofi.sh  install_sddm.sh  install_system_utils.sh  install_theme_switcher.sh  install_warp.sh  install_waybar.sh  install_workspace_time.sh  performance_optimizer.sh  test_framework.sh
modules/plugins/storage/: README.md
modules/plugins/storage/auto-theme-switcher/: README.md  manifest.yaml
modules/plugins/storage/auto-theme-switcher/scripts/: check_time.sh  startup.sh
modules/plugins/storage/workspace-manager/: README.md  manifest.yaml
modules/plugins/storage/workspace-manager/scripts/: startup.sh  window_opened.sh  workspace_changed.sh
modules/scripts/: install_scripts.sh
modules/themes/: install_themes.sh  install_wallpapers.sh  theme_engine.sh
modules/themes/storage/: README.md
modules/themes/storage/catppuccin-latte/: theme.toml
modules/themes/storage/catppuccin-mocha/: README.md  theme.toml
modules/themes/storage/tokyo-night/: README.md  theme.toml
modules/utils/: resource_monitor.py
modules/visual-effects/: README.md  visual_effects_manager.sh
modules/widgets/: install_ags.sh
postman/: API-Integration-Tests.postman_collection.json
presets/: default.preset  gaming.preset  hybrid.preset  minimal.preset  showcase.preset  work.preset
restassured/: pom.xml
restassured/src/test/java/com/example/api/: ApiIntegrationTests.java
src/: config.rs  lib.rs  main.rs  plugins.rs  themes.rs
test-config/: hyprsupreme.toml
tests/: README.md  conftest.py  integration.test.js  requirements.txt  test_encryption.py  test_install.bats  test_installation.py  test_installer.py
tests/integration/: test_example.bats  test_plugin_integration.py  test_theme_integration.py  test_theme_plugin_conflicts.py  test_theme_plugin_integration.py
tests/monitoring/: resource_monitor_advanced.py
tests/performance/: benchmark_suite.py  test_plugin_performance.py  test_theme_performance.py  test_theme_switching.py
tests/stress/: test_system_stability.py
tests/unit/: test_community_platform.py  test_gpu_management.py  test_plugins.py  test_themes.py
tools/: __init__.py  ai_assistant.py  ai_updater.py  flatpak_manager.sh  gpu_presets.sh  gpu_scheduler.sh  gpu_switcher.sh  hyprsupreme-cloud.py  hyprsupreme-community.py  hyprsupreme-config  hyprsupreme-migrate.py  monitor_dashboard.py  resolution_manager.sh  sddm_resolution_checker.sh  verify_prerequisites.sh
