[package]
name = "hyprsupreme-builder"
version = "3.0.0"
edition = "2021"
description = "A builder tool for Hyprland configurations and related components"
authors = ["Alex <alex@example.com>"]
license = "MIT"
repository = "https://github.com/username/hyprsupreme-builder"

[lib]
name = "hyprsupreme_builder"
crate-type = ["cdylib"]

[dependencies]
# CLI and user interface
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"

# Async runtime and networking
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Filesystem and path handling
walkdir = "2.4"
dirs = "6.0"
fs_extra = "1.3"
dunce = "1.0"
shellexpand = "3.1"
notify = "8.0"

# Error handling and logging
anyhow = "1.0"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
which = "8.0"
git2 = "0.18"
regex = "1.10"
lazy_static = "1.5"
semver = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-build-config = "0.20"
